# win-capture-audio

./: .cmake-format.json  CMakeLists.txt
src/: audio-capture-helper.cpp  audio-capture.cpp  mixer.cpp  session-monitor.hpp
